refactor(scss/components/_button.scss): rename button colors classes names

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             lectus habitasse. Sed.
           </p>
           <div class="btn-group">
-            <button class="btn__gold">Ultricies</button>
-            <button class="btn__white">Tristique&nbsp;montes</button>
+            <button class="btn-gold">Ultricies</button>
+            <button class="btn-white">Tristique&nbsp;montes</button>
           </div>
           <div class="info-group">
             <svg class="info-icon" xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36"
