fix(header): fix header width

--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 </head>
 
 <body>
-  <header class="main-header container">
-    <a href="/" title="Bagels &amp; Co">
-      <h1 class="site-logo">Bagels &amp; Co</h1>
-    </a>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#essentials">Our&nbsp;essentials</a></li>
-        <li><a href="#testimony">Testimony</a></li>
-        <li><a href="/">Contact</a></li>
-      </ul>
-    </nav>
-
-    <button class="btn-green">Order&nbsp;now</button>
-
-    <button id="menu-toggler" class="btn-mobile-nav" aria-expanded="false">
-      <span class="btn-mobile-nav__line"></span>
-      <span class="btn-mobile-nav__line"></span>
-      <span class="btn-mobile-nav__line"></span>
-    </button>
+  <header class="main-header">
+    <div class="container">
+      <a href="/" title="Bagels &amp; Co">
+        <h1 class="site-logo">Bagels &amp; Co</h1>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#essentials">Our&nbsp;essentials</a></li>
+          <li><a href="#testimony">Testimony</a></li>
+          <li><a href="/">Contact</a></li>
+        </ul>
+      </nav>
+  
+      <button class="btn-green">Order&nbsp;now</button>
+  
+      <button id="menu-toggler" class="btn-mobile-nav" aria-expanded="false">
+        <span class="btn-mobile-nav__line"></span>
+        <span class="btn-mobile-nav__line"></span>
+        <span class="btn-mobile-nav__line"></span>
+      </button>
+    </div>
 
   </header>
   <main>
