--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       </header>
       <div class="container card-wrapper">
         <div class="card">
-          <img width="447px" height="559px" class="card__img" src="/img/cards/recipes/card-recipe_1.webp" alt="card">
+          <img width="447" height="559" class="card__img" src="/img/cards/recipes/card-recipe_1.webp" alt="card">
           <div class="card__content">
             <div class="card__content__title">Donec commodo in vel</div>
             <div class="card__content__subtitle">Eget mattis dictumst habitant posuere</div>
@@ -307,7 +307,7 @@
         </div>
         <!-- DEV <div id="card-right" class="card"> -->
         <div class="card small">
-          <img width="124px" height="124px" class="card__img" src="/img/cards/recipes/card-recipe_2.webp" alt="card">
+          <img width="124" height="124" class="card__img" src="/img/cards/recipes/card-recipe_2.webp" alt="card">
           <div class="card__content">
             <div class="card__content__title">Malesuada turpis</div>
             <div class="card__content__subtitle">Sed commodo arcu nunc eu. Quis risus</div>
