feat(section testimony): handle testimny cards animation

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <li><a href="/">Contact</a></li>
         </ul>
       </nav>
-  
+
       <button class="btn-green">Order&nbsp;now</button>
-  
+
       <button id="menu-toggler" class="btn-mobile-nav" aria-expanded="false">
         <span class="btn-mobile-nav__line"></span>
         <span class="btn-mobile-nav__line"></span>
@@ -294,9 +294,10 @@
           faucibus. Id.
         </div>
       </header>
-      <div class="container card-wrapper">
-        <div class="card">
-          <img width="447" height="559" class="card__img" src="/img/cards/recipes/card-recipe_1.webp" alt="card">
+      <div id="testimony-cards" class="container card-wrapper">
+        <div class="card card-normal">
+          <img width="447" height="559" class="card__img" src="/img/cards/recipes/card-recipe_1.webp" alt="card"
+            loading="lazy">
           <div class="card__content">
             <div class="card__content__title">Donec commodo in vel</div>
             <div class="card__content__subtitle">Eget mattis dictumst habitant posuere</div>
@@ -305,9 +306,9 @@
               sed amet pellentesque.</p>
           </div>
         </div>
-        <!-- DEV <div id="card-right" class="card"> -->
-        <div class="card small">
-          <img width="124" height="124" class="card__img" src="/img/cards/recipes/card-recipe_2.webp" alt="card">
+        <div class="card card-small">
+          <img width="124" height="124" class="card__img" src="/img/cards/recipes/card-recipe_2.webp" alt="card"
+            loading="lazy">
           <div class="card__content">
             <div class="card__content__title">Malesuada turpis</div>
             <div class="card__content__subtitle">Sed commodo arcu nunc eu. Quis risus</div>
