--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
 
-      <button class="btn-green">Order&nbsp;now</button>
+      <button id="order" class="btn-green">Order&nbsp;now</button>
 
       <button id="menu-toggler" class="btn-mobile-nav" aria-expanded="false">
         <span class="btn-mobile-nav__line"></span>
@@ -316,6 +316,14 @@
             <p class="card__content__text">Non tincidunt commodo erat massa nunc elit massa nulla. Lobortis vitae purus
               nunc scelerisque. Maecenas.</p>
           </div>
+        </div>
+      </div>
+      <div class="aside-wrapper">
+        <div class="aside">
+          <div class="surtitle">Ipsum viverra sit ut phasellus nulla a. Sed vitae aliquet.</div>
+          <div class="title">Tellus tincidunt gravida tincidunt dui nulla arcu .</div>
+          <img class="img" src="/img/cards/recipes/aside-inner-bg.webp" alt="">
+          <button class="btn-green">Get your fidelity card now</button>
         </div>
       </div>
     </section>
