fix(index.html): fix testimony aside image width and height bad values

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <div class="aside">
           <div class="surtitle">Ipsum viverra sit ut phasellus nulla a. Sed vitae aliquet.</div>
           <div class="title">Tellus tincidunt gravida tincidunt dui nulla arcu .</div>
-          <img class="img" src="/img/cards/recipes/aside-inner-bg.webp" alt="">
+          <img width="358" height="226" class="img" src="/img/cards/recipes/aside-inner-bg.webp" alt="">
           <button class="btn-green">Get your fidelity card now</button>
         </div>
       </div>
