--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
   <footer>
    <div class="container">
     <div class="footer">
-      <img class="footer__site-logo" src="/img/logo.webp" alt="logo">
+      <img height="63" width="58" class="footer__site-logo" src="/img/logo.webp" alt="logo">
       <div class="footer__social-network">
         <a href="/" class="footer__social-network--link">
           <svg class="icon-instagram" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
