fix(_base.scss): fix line-height

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <img width="480" height="319" class="card__img" src="/img/cards/recipes/recipe_1.webp" alt="item 1"
             loading="lazy">
           <div class="card__name">Tristique sit sit</div>
-          <div class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
-          </div>
+          <p class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
+          </p>
           <div class="card__icon">
             <svg class="icon_spicy" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -133,8 +133,8 @@
           <img width="480" height="320" class="card__img" src="/img/cards/recipes/recipe_2.webp" alt="item 2"
             loading="lazy">
           <div class="card__name">Commodo id risus</div>
-          <div class="card__description">Malesuada viverra tristique eget pulvinar nibh sagittis id.
-          </div>
+          <p class="card__description">Malesuada viverra tristique eget pulvinar nibh sagittis id.
+          </p>
           <div class="card__icon">
             <svg class="icon_meat" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -155,8 +155,8 @@
           <img width="480" height="480" class="card__img" src="/img/cards/recipes/recipe_3.webp" alt="item 3"
             loading="lazy">
           <div class="card__name">Maecenas pretium</div>
-          <div class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
-          </div>
+          <p class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
+          </p>
           <div class="card__icon">
             <svg class="icon_spicy" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -197,8 +197,8 @@
           <img width="480" height="319" class="card__img" src="/img/cards/recipes/recipe_1.webp" alt="item 1"
             loading="lazy">
           <div class="card__name">Tristique sit sit</div>
-          <div class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
-          </div>
+          <p class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
+          </p>
           <div class="card__icon">
             <svg class="icon_spicy" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -226,8 +226,8 @@
           <img width="480" height="320" class="card__img" src="/img/cards/recipes/recipe_2.webp" alt="item 2"
             loading="lazy">
           <div class="card__name">Commodo id risus</div>
-          <div class="card__description">Malesuada viverra tristique eget pulvinar nibh sagittis id.
-          </div>
+          <p class="card__description">Malesuada viverra tristique eget pulvinar nibh sagittis id.
+          </p>
           <div class="card__icon">
             <svg class="icon_meat" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -248,8 +248,8 @@
           <img width="480" height="480" class="card__img" src="/img/cards/recipes/recipe_3.webp" alt="item 3"
             loading="lazy">
           <div class="card__name">Maecenas pretium</div>
-          <div class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
-          </div>
+          <p class="card__description">Nunc ultrices enim justo vitae laoreet rhoncus. Vel.
+          </p>
           <div class="card__icon">
             <svg class="icon_spicy" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
