--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="preload" href="/fonts/avenir/avenir_regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/avenir/avenir_heavy-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bagels &amp; Co</title>
   <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, at?">
+  <link rel="preload" href="/fonts/avenir/avenir_regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/fonts/avenir/avenir_heavy.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 
 <body>
